--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 <body>
 	<!-- Hero(extended) navbar -->
 	<div class="navbar navbar--extended">
-		<nav class="nav__mobile"></nav>
 		<div class="container">
 			<div class="navbar__inner">
-				<a href="index.html" class="navbar__logo">Logo</a>
+				<span class="navbar__logo">Rhittm</span>
 				<nav class="navbar__menu">
 					<ul>
-						<li><a href="#">Option</a></li>
-						<li><a href="#">Option 2</a></li>
+						<li><a href="https://rhittm.netlify.com">Open App</a></li>
 					</ul>
 				</nav>
 				<div class="navbar__menu-mob"><a href="" id='toggle'><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z" class=""></path></svg></a></div>
@@ -32,10 +30,9 @@
 			<div class="container">
 				<div class="hero__content">
 					<div class="hero__content__inner" id='navConverter'>
-						<h1 class="hero__title">A production-ready theme for your projects</h1>
-						<p class="hero__text">Evie is an MIT licensed template bundled with a minimal style guide to build websites faster. It is extemely lightweight, customizable and works perfectly on modern browsers.</p>
-						<a href="#" class="button button__accent">Download Evie</a>
-						<a href="#" class="button hero__button">Learn more</a>
+						<h1 class="hero__title">Popularity As a Service</h1>
+						<p class="hero__text">Rhittm analyzes Instagram and suggests you when to post to get the most out of it. It also suggests the most popular hashtags to give your creativity a jump-start.</p>
+						<a href="https://rhittm.netlify.com" class="button button__accent">Get App</a>
 					</div>
 				</div>
 			</div>
@@ -44,31 +41,31 @@
 	<!-- Steps -->
 	<div class="steps landing__section">
 		<div class="container">
-			<h2>Who can use Evie?</h2>
-			<p>Here's who we can think of, but surely creative people will surprise us.</p>
+			<h2>How it works?</h2>
+			<p>You can use Rhittm for any kind of blogs.</p>
 		</div>
 		<div class="container">
 			<div class="steps__inner">
 				<div class="step">
 					<div class="step__media">
-						<img src="./images/undraw_designer.svg" class="step__image">
+						<img src="./images/collecting.svg" class="step__image">
 					</div>
-					<h4>Programmers</h4>
-					<p class="step__text">A landing page for your open source projects. Present your solution, easily create docs.</p>
+					<h4>We Analyze Instagram</h4>
+					<p class="step__text">We track overall Instagram activity to figure out the best time to post. We also analyze hashtags to handpick the most popular ones.</p>
 				</div>
 				<div class="step">
 					<div class="step__media">
-						<img src="./images/undraw_responsive.svg" class="step__image">
+						<img src="./images/posting.svg" class="step__image">
 					</div>
-					<h4>Designers</h4>
-					<p class="step__text">A website for your own freebies. Let the world download and use your artwork.</p>
+					<h4>You Post</h4>
+					<p class="step__text">You check the time, grab the hashtags and post your content on Instagram.</p>
 				</div>
 				<div class="step">
 					<div class="step__media">
-						<img src="./images/undraw_creation.svg" class="step__image">
+						<img src="./images/popular.svg" class="step__image">
 					</div>
-					<h4>Makers</h4>
-					<p class="step__text">A great starting point for your web application. Focus on your idea and execution.</p>
+					<h4>You Become Popular</h4>
+					<p class="step__text">As more people see your content because of precisely picked posting time and hashtags, you gain popularity.</p>
 				</div>
 			</div>
 		</div>
@@ -78,11 +75,11 @@
 		<div class="container">
 			<div class="expanded__inner">
 				<div class="expanded__media">
-					<img src="./images/undraw_browser.svg" class="expanded__image">
+					<img src="./images/hashtags.svg" class="expanded__image">
 				</div>
 				<div class="expanded__content">
-					<h2 class="expanded__title">Natural styling with almost nothing to learn</h2>
-					<p class="expanded__text">Evie brings you the pages you'll need and the structure to create your own, without a learning curve. It is minimal and mostly styles plain elements. There are only a few classes you'll need to know but nothing to disrupt your preferred coding style.</p>
+					<h2 class="expanded__title">Hashtags</h2>
+					<p class="expanded__text">We analyze Instagram to figure out the most efficient hashtags by categories. Feel free to grab them, they are just one tap away.</p>
 				</div>
 			</div>
 		</div>
@@ -91,24 +88,11 @@
 		<div class="container">
 			<div class="expanded__inner">
 				<div class="expanded__media">
-					<img src="./images/undraw_frameworks.svg" class="expanded__image">
+					<img src="./images/popular.svg" class="expanded__image">
 				</div>
 				<div class="expanded__content">
-					<h2 class="expanded__title">Framework agnostic. Your front-end setup, your choice.</h2>
-					<p class="expanded__text">Evie has zero dependencies and uses vanilla JavaScript for a few functions with minimal footprint. You can use React, Vue, Angular, jQuery or whatever you prefer.</p>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="expanded landing__section">
-		<div class="container">
-			<div class="expanded__inner">
-				<div class="expanded__media">
-					<img src="./images/together.svg" class="expanded__image">
-				</div>
-				<div class="expanded__content">
-					<h2 class="expanded__title">Ready for production or rapid prototyping</h2>
-					<p class="expanded__text">Landing, authentication and a few other pages to select from, despite the small size. Tested on production at unDraw with amazing speeds and unopinionated on how to structure your project. We really hope you'll find it awesome and useful!</p>
+					<h2 class="expanded__title">Become Popular</h2>
+					<p class="expanded__text">Because of precisely picked posting time and hashtags, many people will see your content.</p>
 				</div>
 			</div>
 		</div>
@@ -118,8 +102,8 @@
 		<div class="container">
 			<div class="cta__inner">
 				<h2 class="cta__title">Get started now</h2>
-				<p class="cta__sub cta__sub--center">Grab the production version and begin your project instantly.</p>
-				<a href="#" class="button button__accent">Download Evie</a>
+				<p class="cta__sub cta__sub--center">Just pick the time, grab the hashtags and you're good to go.</p>
+				<a href="#" class="button button__accent">Get App</a>
 			</div>
 		</div>
 	</div>
@@ -127,34 +111,25 @@
 	<div class="footer footer--dark">
 		<div class="container">
 			<div class="footer__inner">
-				<a href="index.html" class="footer__textLogo">Evie theme</a>
+				<a href="index.html" class="footer__textLogo">Rhittm</a>
 				<div class="footer__data">
 					<div class="footer__data__item">
 						<div class="footer__row">
-							Created by <a href="https://twitter.com/ninalimpi" target="_blank" class="footer__link">Katerina Limpitsouni</a>
+							Created by <a href="https://miloslav.website" target="_blank" class="footer__link">Miloslav Voloskov</a>
 						</div>
 						<div class="footer__row">
-						Code/design by <a href="https://twitter.com/anges244" target="_blank" class="footer__link">Aggelos Gesoulis</a>
-						</div>
-					</div>
-					<div class="footer__data__item">
-						<div class="footer__row">Created for <a href="https://undraw.co" target="_blank" class="footer__link">unDraw</a>
-						</div>
-						<div class="footer__row">Special thx to <a href="https://shareboost.co" target="_blank" class="footer__link">ShareBoost</a> for the support
+						Evie theme and illustrations by <a href="https://undraw.co" target="_blank" class="footer__link">Undraw</a>
 						</div>
 					</div>
 					<div class="footer__data__item">
 					<div class="footer__row">
-						<a href="https://github.com/anges244/evie" target="_blank" class="footer__link">GitHub</a>
+						<a href="https://github.com/rhittm" target="_blank" class="footer__link">GitHub</a>
 					</div>
 					<div class="footer__row">
-						<a href="https://twitter.com/undraw_co" target="_blank" class="footer__link">Twitter</a>
+						<a href="https://rhittm.netlify.com" target="_blank" class="footer__link">Get App</a>
 					</div>
 					<div class="footer__row">
-						<a href="https://www.facebook.com/undraw.co/" target="_blank" class="footer__link">Facebook</a>
-					</div>
-					<div class="footer__row">
-						<a href="./additional.html" class="footer__link">MIT license</a>
+						<a href="https://github.com/rhittm/rhittm/blob/master/LICENSE" target="_blank" class="footer__link">Legal</a>
 					</div>
 				</div>
 			</div>
