--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<div class="cta__inner">
 				<h2 class="cta__title">Get started now</h2>
 				<p class="cta__sub cta__sub--center">Just pick the time, grab the hashtags and you're good to go.</p>
-				<a href="#" class="button button__accent">Get App</a>
+				<a href="https://rhittm.netlify.com" class="button button__accent">Get App</a>
 			</div>
 		</div>
 	</div>
