--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<div class="hero__content">
 					<div class="hero__content__inner" id='navConverter'>
 						<h1 class="hero__title">Popularity As a Service</h1>
-						<p class="hero__text">Rhittm analyzes Instagram and suggests you when to post to get the most out of it. It also suggests the most popular hashtags to give your creativity a jump-start.</p>
+						<p class="hero__text">Rhittm analyses Instagram and suggests you when to post to get the most out of it. It also suggests the most popular hashtags to give your creativity a jump-start.</p>
 						<a href="https://rhittm.netlify.com" class="button button__accent">Get App</a>
 					</div>
 				</div>
@@ -50,8 +50,8 @@
 					<div class="step__media">
 						<img src="./images/collecting.svg" class="step__image">
 					</div>
-					<h4>We Analyze Instagram</h4>
-					<p class="step__text">We track overall Instagram activity to figure out the best time to post. We also analyze hashtags to handpick the most popular ones.</p>
+					<h4>We analyse Instagram</h4>
+					<p class="step__text">We track overall Instagram activity to figure out the best time to post. We also analyse hashtags to handpick the most popular ones.</p>
 				</div>
 				<div class="step">
 					<div class="step__media">
@@ -79,7 +79,7 @@
 				</div>
 				<div class="expanded__content">
 					<h2 class="expanded__title">Hashtags</h2>
-					<p class="expanded__text">We analyze Instagram to figure out the most efficient hashtags by categories. Feel free to grab them, they are just one tap away.</p>
+					<p class="expanded__text">We analyse Instagram to figure out the most efficient hashtags by categories. Feel free to grab them, they are just one tap away.</p>
 				</div>
 			</div>
 		</div>
