--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Rhittm – your posts are always on time.</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/necolas/normalize.css/normalize.min.css">
+	<link rel="shortcut icon" href="favicon.ico">
 	<link rel='stylesheet' href='css/style.css'>
 </head>
 <body>
@@ -12,7 +13,10 @@
 	<div class="navbar navbar--extended">
 		<div class="container">
 			<div class="navbar__inner">
-				<span class="navbar__logo">Rhittm</span>
+				<span class="navbar__logo">
+					<img src="images/cat.svg" alt="Logo">
+					<span>Rhittm</span>
+				</span>
 				<nav class="navbar__menu">
 					<ul>
 						<li><a href="https://rhittm.netlify.com">Open App</a></li>
@@ -111,7 +115,13 @@
 	<div class="footer footer--dark">
 		<div class="container">
 			<div class="footer__inner">
-				<a href="index.html" class="footer__textLogo">Rhittm</a>
+				<!-- <a href="index.html" class="">Rhittm</a> -->
+				<div class="footer__textLogo">
+					<a class="navbar__logo" href="https://rhittm.netlify.com">
+						<img src="images/cat.svg" alt="Logo">
+						<span>Rhittm</span>
+					</a>
+				</div>
 				<div class="footer__data">
 					<div class="footer__data__item">
 						<div class="footer__row">
