--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<title>Rhittm – your posts are always on time.</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/necolas/normalize.css/normalize.min.css">
 	<link rel="shortcut icon" href="favicon.ico">
-	<link rel='stylesheet' href='css/style.css'>
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="canonical" href="https://rhittm.github.com">
+	<meta name="description" content="Rhittm analyses Instagram activity insights and suggests you when to post to get the most out of it. It also suggests the most popular hashtags to give your creativity a jump-start.">
 </head>
 <body>
 	<!-- Hero(extended) navbar -->
