--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
 			<div class="navbar__inner">
 				<span class="navbar__logo">
-					<img src="images/cat.svg" alt="Logo">
+					<img src="images/cat.svg" alt="Logo" title="Logo">
 					<span>Rhittm</span>
 				</span>
 				<nav class="navbar__menu">
@@ -54,21 +54,21 @@
 			<div class="steps__inner">
 				<div class="step">
 					<div class="step__media">
-						<img src="./images/collecting.svg" class="step__image">
+						<img src="./images/collecting.svg" class="step__image" alt="We Analyse Instagram" title="We Analyse Instagram">
 					</div>
 					<h4>We analyse Instagram</h4>
 					<p class="step__text">We analyse overall Instagram activity insights to figure out the best time to post. We also analyse hashtags to handpick the most popular ones.</p>
 				</div>
 				<div class="step">
 					<div class="step__media">
-						<img src="./images/posting.svg" class="step__image">
+						<img src="./images/posting.svg" class="step__image" alt="You Post" title="You Post">
 					</div>
 					<h4>You Post</h4>
 					<p class="step__text">You check the time, grab the hashtags and post your content on Instagram.</p>
 				</div>
 				<div class="step">
 					<div class="step__media">
-						<img src="./images/popular.svg" class="step__image">
+						<img src="./images/popular.svg" class="step__image" alt="You Become Popular" title="You Become Popular">
 					</div>
 					<h4>You Become Popular</h4>
 					<p class="step__text">As more people see your content because of precisely picked posting time and hashtags, you gain popularity.</p>
@@ -81,7 +81,7 @@
 		<div class="container">
 			<div class="expanded__inner">
 				<div class="expanded__media">
-					<img src="./images/hashtags.svg" class="expanded__image">
+					<img src="./images/hashtags.svg" class="expanded__image" alt="Hashtags" title="Hashtags">
 				</div>
 				<div class="expanded__content">
 					<h2 class="expanded__title">Hashtags</h2>
@@ -94,7 +94,7 @@
 		<div class="container">
 			<div class="expanded__inner">
 				<div class="expanded__media">
-					<img src="./images/popular.svg" class="expanded__image">
+					<img src="./images/popularity.svg" class="expanded__image" alt="Popularity" title="Popularity">
 				</div>
 				<div class="expanded__content">
 					<h2 class="expanded__title">Become Popular</h2>
@@ -120,7 +120,7 @@
 				<!-- <a href="index.html" class="">Rhittm</a> -->
 				<div class="footer__textLogo">
 					<a class="navbar__logo" href="https://rhittm.netlify.com">
-						<img src="images/cat.svg" alt="Logo">
+						<img src="images/cat.svg" alt="Logo" title="Logo">
 						<span>Rhittm</span>
 					</a>
 				</div>
